metrics-cache/src/section/snapshots/metrics_cache__section__performance__tests__kube_performance_cpu_v1.snap
---
source: metrics-cache/src/section/performance.rs
expression: "KubePerformanceCpuV1::new(1_500_000_000)"
---
{
  "resource": {
    "type_": "cpu",
    "usage": 1.5
  }
}
