metrics-cache/src/section/snapshots/metrics_cache__section__performance__tests__kube_performance_memory_swap_v1.snap
---
source: metrics-cache/src/section/performance.rs
expression: "KubePerformanceMemorySwapV1::new(114_962_432)"
---
{
  "resource": {
    "type_": "memory",
    "usage": 114962432.0
  }
}
